--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -4,5 +4,31 @@
   "internet": {
     "title": "No internet connection",
     "description": "Unable to connect to your internet, please make sure you have internet service, then refresh the page"
+  },
+  "onboarding": {
+    "page1": {
+      "title": "كل اللي رح تحتاجه",
+      "subTitle": "في مكان واحد"
+    },
+    "page2": {
+      "title": "أنت كتاجر اعرض منتجاتك",
+      "subTitle": "والدفع أون لاين"
+    },
+    "page3": {
+      "title": "لا تقلق من شيء",
+      "subTitle": "طلبك واصل لباب بيتك"
+    }
+  },
+  "buttons": {
+    "next": "التالي",
+    "skip": "تخطي",
+    "onboardingBtn": "تسوقي الآن",
+    "languageBtn": "حفظ ومتابعة"
+  },
+  "languageModel": {
+    "title": "اختر اللغة",
+    "arBtn": "العربية",
+    "enBtn": "English",
+    "saveBtn": "حفظ ومتابعة"
   }
 }
