finish translations structure

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -32,15 +32,15 @@
     "saveBtn": "حفظ ومتابعة"
   },
   "login": {
-    "welcome": "Welcome Go Jaddy",
-    "login": "Login",
-    "continue-as-visitor": "Continue as a visitor",
-    "new-user": "New user",
-    "register": "Register"
+    "welcome": "اهلا وسهلا في جو جادي",
+    "login": "دخول",
+    "continue-as-visitor": "اكمال ك زائر",
+    "new-user": "مستخدم جديد",
+    "register": "تسجيل"
   },
   "common": {
-    "phone-numebr": "Phone Number",
-    "password": "Password",
-    "forget-password": "Forget Password?"
+    "phone-numebr": "رقم الهاتف",
+    "password": "كلمة المرور",
+    "forget-password": "نسيت كلمة المرور"
   }
 }
