--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -67,5 +67,12 @@
   },
   "product-details": {
     "select-color": "Select color"
+  },
+  "api": {
+    "account": {
+      "login": {
+        "usernotfound": "*User not found"
+      }
+    }
   }
 }
