--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -46,8 +46,8 @@
   "home": {
     "arrival": "Arrival",
     "news": "News",
-    "best": "Best",
-    "selling": "Selling"
+    "best": "أفضل",
+    "selling": "مبيعات"
   },
   "search": {
     "search-input": "ابحث في المتاجر",
