--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -87,6 +87,9 @@
   "product-details": {
     "select-color": "Select color"
   },
+  "category": {
+    "title": "Category"
+  },
   "api": {
     "account": {
       "login": {
