--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -91,6 +91,11 @@
   "category": {
     "title": "Category"
   },
+  "stores": {
+    "title": "Stores",
+    "allStores": "All Stores",
+    "FollowedStores": "Followed Stores"
+  },
   "api": {
     "account": {
       "login": {
