--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -102,7 +102,8 @@
     "with-images": "With images",
     "related": "Related",
     "products": "Products",
-    "you-may-like": "You may like"
+    "you-may-like": "You may like",
+    "rate-product": "Rate product"
   },
   "category": {
     "title": "Category"
@@ -110,7 +111,8 @@
   "whishlist": {
     "add": "Add to wishlist",
     "add-hint": "Choose the collection you want to add the product to, you can create a new collage",
-    "add-collection": "Add new collection"
+    "add-collection": "Add new collection",
+    "collection-name": "Collection name"
   },
   "stores": {
     "title": "Stores",
