add new translations

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -51,8 +51,8 @@
     "forget-password-description": "هل نسيت كلمة المرور؟ لا مشكلة يمكنك ارجاع البريد الالكتروني المسجل لاستلام كود الاستعادة"
   },
   "home": {
-    "arrival": "Arrival",
-    "news": "News",
+    "arrival": "وصل",
+    "news": "مؤخرا",
     "best": "أفضل",
     "selling": "مبيعات"
   },
@@ -83,8 +83,12 @@
     "favorite": "المفضلة",
     "about-app": "عن التطبيق",
     "currency": "العملة",
-    "language": "اللغة",
-    "need-help": "تحتاج مساعدة؟"
+    "language": "لغة التطبيق",
+    "need-help": "تحتاج مساعدة؟",
+    "if-want-talk": "إذا كنت بحاجة إلى التحدث إلينا ، يمكنك ذلك من خلال",
+    "email": "البريد الالكتروني",
+    "support": "الدعم الفني",
+    "direct-call": "مكالمة مباشرة"
   },
   "category": {
     "title": "التصنيفات"
