progress cart flow +1

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -139,7 +139,8 @@
     "discountCode": "do you have discount code?",
     "useDiscountCode": "use discount code",
     "submitBtn": "request done",
-    "total": "Total ({{currency}})"
+    "total": "Total ({{currency}})",
+    "discountPlaceholder": "discount code"
   },
   "api": {
     "account": {
