--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -62,6 +62,7 @@
   },
   "common": {
     "phone-numebr": "Phone Number",
+    "oldPassword": "Old Password",
     "password": "Password",
     "forget-password": "Forget Password?",
     "search_in_store": "Search in store",
@@ -151,7 +152,7 @@
     "account-details": "Account details",
     "request-list": "Request list",
     "payment-information": "Payment information",
-    "previous-titles": "Previous titles",
+    "previous-titles": "Previous addresses",
     "return-products": "Return products",
     "score-balance": "Score balance"
   },
@@ -200,6 +201,30 @@
     "titleHeader": "Points Balance",
     "points": "{{points}} Points",
     "equivalent": "equivalent to {{money}}"
+  },
+  "addAddress": {
+    "titleHeader": "Add New Address",
+    "description": "You can delete/modify any of the added sites with ease after the addition process",
+    "coName": "Company",
+    "fName": "First Name",
+    "lName": "Family Name",
+    "address1": "Address 1",
+    "address2": "Address 2",
+    "country": "Country",
+    "state": "State",
+    "city": "City",
+    "email": "Email",
+    "phone": "Phone Number",
+    "fax": "Fax",
+    "setDefualt": "Set Defualt?",
+    "submitBtn": "Continue"
+  },
+  "profileDetails": {
+    "titleHeader": "Account Details",
+    "myInfo": "Information",
+    "changePhoto": "Change Photo",
+    "password": "Password",
+    "submitBtn": "Save Changes"
   },
   "modal": {
     "successTitle": "are you sure from confirm?",
