--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -93,6 +93,7 @@
     "direct-call": "مكالمة مباشرة",
     "buyer-account": "حساب التاجر",
     "logout": "تسجيل الخروج",
+    "login": "تسجيل دخول",
     "others": "أخرى",
     "account-details": "تفاصيل الحساب",
     "request-list": "قائــمة الطلــبات",
