--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -150,6 +150,7 @@
     "direct-call": "Direct call",
     "buyer-account": "Seller account",
     "logout": "Logout",
+    "login": "Login",
     "others": "Others",
     "account-details": "Account details",
     "request-list": "Request list",
