--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -95,7 +95,9 @@
   "search": {
     "search-input": "Search in store",
     "search-result-for": "Search result for:",
-    "categoryTitle": "Products for: "
+    "categoryTitle": "Products for: ",
+    "start-searching": "Start searching",
+    "no-search-results": "No search results"
   },
   "product-details": {
     "select-color": "Select color",
