--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -170,7 +170,10 @@
     "send": "إرسال",
     "load-more": "تحميل المزيد",
     "continue": "تأكيد",
-    "cancel": "تراجع"
+    "cancel": "تراجع",
+    "select-country": "اختر الدولة",
+    "Palestine": "فلسطين",
+    "Israel": "اسرائيل"
   },
   "EmptyPage": {
     "product-description": "اذهب للرئيسية واكتشف المنتجات",
