--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -154,7 +154,7 @@
     "login": "Login",
     "others": "Others",
     "account-details": "Account details",
-    "request-list": "Request list",
+    "request-list": "Orders list",
     "payment-information": "Payment information",
     "previous-titles": "Previous addresses",
     "return-products": "Return products",
@@ -233,6 +233,12 @@
     "changePhoto": "Change Photo",
     "password": "Password",
     "submitBtn": "Save Changes"
+  },
+  "myOrders": {
+    "titleHeader": "My Orders",
+    "placeholderSearch": "search by order number",
+    "total": "Total ({{currency}} - {{itemNumber}} item)",
+    "chargeTime": "charge time {{time}}"
   },
   "modal": {
     "successTitle": "are you sure from confirm?",
